--- a/src/styles.css
+++ b/src/styles.css
@@ -241,4 +241,16 @@ html, body {
 
 .button {
   margin-top: 6vh;
+  border: 1px solid white;
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  padding: 5px 10px;
+  transition: .3s;
+}
+
+.button:hover {
+  background-color: white;
+  color: black;
+  cursor: pointer;
 }
